Actualización imagen Codo

--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
                     <div class="Justify-content-start">
-                    <img src="images/codoacodo.png" width="120" height="80" alt="Responsive image">
+                    <img src="https://github.com/maro9183/Integrador-Codo-PHP/blob/master/Images/codoacodo.png?raw=true" width="120" height="80" alt="Responsive image">
                   <a class="navbar-brand" href="#">Conf. Bs As</a>
                 </div>
                   
